--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "cd client && npm start",
-    "dependencies": "(npm install) && (cd client && npm install)",
+    "setup": "(npm install) && (cd client && npm install)",
     "build": "cd client && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
