--- a/client/package.json
+++ b/client/package.json
@@ -12,44 +12,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.2",
-    "@angular/common": "6.0.2",
-    "@angular/compiler": "6.0.2",
-    "@angular/core": "6.0.2",
-    "@angular/forms": "6.0.2",
-    "@angular/http": "6.0.2",
-    "@angular/platform-browser": "6.0.2",
-    "@angular/platform-browser-dynamic": "6.0.2",
-    "@angular/router": "6.0.2",
-    "bootstrap": "4.1.1",
-    "core-js": "2.5.6",
+    "@angular/animations": "6.1.7",
+    "@angular/common": "6.1.7",
+    "@angular/compiler": "6.1.7",
+    "@angular/core": "6.1.7",
+    "@angular/forms": "6.1.7",
+    "@angular/http": "6.1.7",
+    "@angular/platform-browser": "6.1.7",
+    "@angular/platform-browser-dynamic": "6.1.7",
+    "@angular/router": "6.1.7",
+    "@ngx-loading-bar/http-client": "^2.2.0",
+    "@ngx-loading-bar/router": "^2.2.0",
+    "bootstrap": "4.1.3",
+    "core-js": "2.5.7",
     "jquery": "3.3.1",
-    "pb-design-system": "5.0.0-beta.6",
-    "popper.js": "1.14.3",
-    "rxjs": "6.1.0",
+    "pb-design-system": "5.0.0-beta.8.0.1",
+    "popper.js": "1.14.4",
+    "rxjs": "6.3.2",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "6.0.3",
-    "@angular/compiler-cli": "6.0.2",
-    "@angular/language-service": "6.0.2",
-    "@types/jasmine": "2.8.7",
+    "@angular/cli": "6.2.2",
+    "@angular/compiler-cli": "6.1.7",
+    "@angular/language-service": "6.1.7",
+    "@types/jasmine": "2.8.8",
     "@types/jasminewd2": "2.0.3",
-    "@types/node": "10.1.2",
-    "codelyzer": "4.3.0",
-    "jasmine": "3.1.0",
-    "jasmine-core": "3.1.0",
+    "@types/node": "10.10.0",
+    "codelyzer": "4.4.4",
+    "jasmine": "3.2.0",
+    "jasmine-core": "3.2.1",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "2.0.2",
+    "karma": "3.0.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "2.0.0",
+    "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "1.1.0",
-    "protractor": "5.3.2",
-    "ts-node": "6.0.3",
-    "tslint": "5.10.0",
+    "karma-jasmine-html-reporter": "1.3.1",
+    "protractor": "5.4.1",
+    "ts-node": "7.0.1",
+    "tslint": "5.11.0",
     "typescript": "2.7.2",
-    "@angular-devkit/build-angular": "0.6.3"
+    "@angular-devkit/build-angular": "0.8.2"
   }
 }
