--- a/client/package.json
+++ b/client/package.json
@@ -21,12 +21,12 @@
     "@angular/platform-browser": "6.1.7",
     "@angular/platform-browser-dynamic": "6.1.7",
     "@angular/router": "6.1.7",
-    "@ngx-loading-bar/http-client": "^2.2.0",
-    "@ngx-loading-bar/router": "^2.2.0",
+    "@ngx-loading-bar/http-client": "2.2.0",
+    "@ngx-loading-bar/router": "2.2.0",
     "bootstrap": "4.1.3",
     "core-js": "2.5.7",
     "jquery": "3.3.1",
-    "pb-design-system": "5.0.0-beta.8.0.1",
+    "pb-design-system": "5.0.0-beta.9",
     "popper.js": "1.14.4",
     "rxjs": "6.3.2",
     "zone.js": "0.8.26"
