add changelog, update package version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-starer-app",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.9",
   "description": "",
   "main": "index.html",
   "scripts": {
