--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-starer-app",
-  "version": "1.0.0-beta.9",
+  "version": "1.0.0",
   "description": "",
   "main": "index.html",
   "scripts": {
@@ -11,16 +11,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://st016lo@dbygitmsprod.pbi.global.pvt/design-system/ng-designsystem-sample-app.git"
+    "url": "https://github.com/PBGUX/ng-starter-app.git"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
-    "prettier": "1.14.2",
+    "prettier": "1.15.1",
     "prettier-stylelint": "0.4.2",
-    "stylelint": "9.5.0",
+    "stylelint": "9.7.1",
     "stylelint-config-standard": "18.2.0",
-    "stylelint-config-idiomatic-order": "5.0.0"
+    "stylelint-config-idiomatic-order": "6.2.0"
   }
 }
