--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "bootstrap": "4.1.3",
     "core-js": "2.5.7",
     "jquery": "3.3.1",
-    "pb-design-system": "5.0.0-beta.10",
+    "pb-design-system": "git://github.com/PBGUX/pb-design-system.git#v5.0.0.-rc",
     "popper.js": "1.14.4",
     "rxjs": "6.3.3",
     "zone.js": "0.8.26"
