--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.1.10",
-    "@angular/common": "6.1.10",
-    "@angular/compiler": "6.1.10",
-    "@angular/core": "6.1.10",
-    "@angular/forms": "6.1.10",
-    "@angular/http": "6.1.10",
-    "@angular/platform-browser": "6.1.10",
-    "@angular/platform-browser-dynamic": "6.1.10",
-    "@angular/router": "6.1.10",
+    "@angular/animations": "7.2.4",
+    "@angular/common": "7.2.4",
+    "@angular/compiler": "7.2.4",
+    "@angular/core": "7.2.4",
+    "@angular/forms": "7.2.4",
+    "@angular/http": "7.2.4",
+    "@angular/platform-browser": "7.2.4",
+    "@angular/platform-browser-dynamic": "7.2.4",
+    "@angular/router": "7.2.4",
     "@ngx-loading-bar/http-client": "2.2.0",
     "@ngx-loading-bar/router": "2.2.0",
     "bootstrap": "4.1.3",
@@ -28,13 +28,14 @@
     "jquery": "3.3.1",
     "pb-design-system": "5.0.0",
     "popper.js": "1.14.4",
-    "rxjs": "6.3.3",
-    "zone.js": "0.8.26"
+    "rxjs": "6.4.0",
+    "tslib": "^1.9.0",
+    "zone.js": "0.8.29"
   },
   "devDependencies": {
-    "@angular/cli": "6.2.6",
-    "@angular/compiler-cli": "6.1.10",
-    "@angular/language-service": "6.1.10",
+    "@angular/cli": "7.3.1",
+    "@angular/compiler-cli": "7.2.4",
+    "@angular/language-service": "7.2.4",
     "@types/jasmine": "2.8.9",
     "@types/jasminewd2": "2.0.5",
     "@types/node": "10.12.0",
@@ -51,7 +52,7 @@
     "protractor": "5.4.1",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
-    "typescript": "2.7.2",
-    "@angular-devkit/build-angular": "0.10.2"
+    "typescript": "3.2.4",
+    "@angular-devkit/build-angular": "~0.13.0"
   }
 }
