--- a/client/package.json
+++ b/client/package.json
@@ -21,38 +21,38 @@
     "@angular/platform-browser": "7.2.4",
     "@angular/platform-browser-dynamic": "7.2.4",
     "@angular/router": "7.2.4",
-    "@ngx-loading-bar/http-client": "2.2.0",
-    "@ngx-loading-bar/router": "2.2.0",
+    "@ngx-loading-bar/http-client": "3.0.0",
+    "@ngx-loading-bar/router": "3.0.0",
     "bootstrap": "4.1.3",
     "core-js": "2.5.7",
     "jquery": "3.3.1",
-    "pb-design-system": "5.0.0",
-    "popper.js": "1.14.4",
+    "pb-design-system": "5.0.1",
+    "popper.js": "1.14.7",
     "rxjs": "6.4.0",
-    "tslib": "^1.9.0",
+    "tslib": "1.9.3",
     "zone.js": "0.8.29"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "0.13.1",
     "@angular/cli": "7.3.1",
     "@angular/compiler-cli": "7.2.4",
     "@angular/language-service": "7.2.4",
-    "@types/jasmine": "2.8.9",
-    "@types/jasminewd2": "2.0.5",
-    "@types/node": "10.12.0",
+    "@types/jasmine": "3.3.9",
+    "@types/jasminewd2": "2.0.6",
+    "@types/node": "10.12.11",
     "codelyzer": "4.5.0",
-    "jasmine": "3.2.0",
-    "jasmine-core": "3.2.1",
+    "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "3.1.0",
+    "jasmine": "3.2.0",
     "karma-chrome-launcher": "2.2.0",
-    "karma-cli": "1.0.1",
+    "karma-cli": "2.0.0",
     "karma-coverage-istanbul-reporter": "2.0.4",
-    "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "1.3.1",
+    "karma-jasmine-html-reporter": "1.4.0",
+    "karma-jasmine": "2.0.1",
+    "karma": "3.1.3",
     "protractor": "5.4.1",
-    "ts-node": "7.0.1",
-    "tslint": "5.11.0",
-    "typescript": "3.2.4",
-    "@angular-devkit/build-angular": "~0.13.0"
+    "ts-node": "8.0.2",
+    "tslint": "5.12.1",
+    "typescript": "3.2.4"
   }
 }
