--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.4",
-    "@angular/common": "7.2.4",
-    "@angular/compiler": "7.2.4",
-    "@angular/core": "7.2.4",
-    "@angular/forms": "7.2.4",
-    "@angular/http": "7.2.4",
-    "@angular/platform-browser": "7.2.4",
-    "@angular/platform-browser-dynamic": "7.2.4",
-    "@angular/router": "7.2.4",
+    "@angular/animations": "7.2.14",
+    "@angular/common": "7.2.14",
+    "@angular/compiler": "7.2.14",
+    "@angular/core": "7.2.14",
+    "@angular/forms": "7.2.14",
+    "@angular/http": "7.2.14",
+    "@angular/platform-browser": "7.2.14",
+    "@angular/platform-browser-dynamic": "7.2.14",
+    "@angular/router": "7.2.14",
     "@ngx-loading-bar/http-client": "3.0.0",
     "@ngx-loading-bar/router": "3.0.0",
     "bootstrap": "4.1.3",
@@ -33,10 +33,10 @@
     "zone.js": "0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.8",
-    "@angular/cli": "^7.3.8",
-    "@angular/compiler-cli": "^7.2.14",
-    "@angular/language-service": "7.2.4",
+    "@angular-devkit/build-angular": "0.13.8",
+    "@angular/cli": "7.3.8",
+    "@angular/compiler-cli": "7.2.14",
+    "@angular/language-service": "7.2.14",
     "@types/jasmine": "3.3.9",
     "@types/jasminewd2": "2.0.6",
     "@types/node": "10.12.11",
@@ -44,15 +44,15 @@
     "jasmine": "3.2.0",
     "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "3.1.3",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "2.0.0",
     "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.0",
     "protractor": "5.4.1",
-    "ts-node": "8.0.2",
-    "tslint": "5.12.1",
+    "ts-node": "8.1.0",
+    "tslint": "5.16.0",
     "typescript": "3.2.4"
   }
 }
