update to use 6.0.0 beta 1

--- a/client/package.json
+++ b/client/package.json
@@ -13,20 +13,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "7.2.14",
+    "@angular/cdk": "7.3.0",
     "@angular/common": "7.2.14",
     "@angular/compiler": "7.2.14",
     "@angular/core": "7.2.14",
     "@angular/forms": "7.2.14",
     "@angular/http": "7.2.14",
+    "@angular/material": "7.3.0",
     "@angular/platform-browser": "7.2.14",
     "@angular/platform-browser-dynamic": "7.2.14",
     "@angular/router": "7.2.14",
-    "@ngx-loading-bar/http-client": "3.0.0",
-    "@ngx-loading-bar/router": "3.0.0",
-    "bootstrap": "^4.3.1",
+    "@ngx-loading-bar/core": "4.2.0",
+    "@ngx-loading-bar/http": "4.2.0",
+    "@ngx-loading-bar/http-client": "4.2.0",
+    "@ngx-loading-bar/router": "4.2.0",
+    "bootstrap": "4.3.1",
     "core-js": "2.5.7",
-    "jquery": "^3.4.1",
-    "pb-design-system": "5.1.0",
+    "jquery": "3.4.1",
+    "pb-design-system": "6.0.0-beta.1.0.1",
     "popper.js": "1.14.7",
     "rxjs": "6.4.0",
     "tslib": "1.9.3",
