--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ng-starter-app",
-  "version": "1.1.0",
-  "description": "",
+  "version": "2.0.0-beta.1",
+  "description": "PB starter application with DS 6.0 beta",
   "main": "index.html",
   "scripts": {
     "start": "cd client && npm start",
@@ -16,12 +16,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "postcss": "7.0.16"
+    "postcss": "7.0.17"
   },
   "devDependencies": {
-    "prettier": "1.17.1",
+    "prettier": "1.18.2",
     "stylelint-prettier": "1.1.1",
-    "stylelint": "10.0.1",
+    "stylelint": "10.1.0",
     "stylelint-config-prettier": "5.2.0"
   }
 }
