--- a/client/package.json
+++ b/client/package.json
@@ -12,17 +12,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.14",
+    "@angular/animations": "8.1.1",
     "@angular/cdk": "7.3.0",
-    "@angular/common": "7.2.14",
-    "@angular/compiler": "7.2.14",
-    "@angular/core": "7.2.14",
-    "@angular/forms": "7.2.14",
-    "@angular/http": "7.2.14",
+    "@angular/common": "8.1.1",
+    "@angular/compiler": "8.1.1",
+    "@angular/core": "8.1.1",
+    "@angular/forms": "8.1.1",
     "@angular/material": "7.3.0",
-    "@angular/platform-browser": "7.2.14",
-    "@angular/platform-browser-dynamic": "7.2.14",
-    "@angular/router": "7.2.14",
+    "@angular/platform-browser": "8.1.1",
+    "@angular/platform-browser-dynamic": "8.1.1",
+    "@angular/router": "8.1.1",
     "@ngx-loading-bar/core": "4.2.0",
     "@ngx-loading-bar/http": "4.2.0",
     "@ngx-loading-bar/http-client": "4.2.0",
@@ -33,19 +32,19 @@
     "jquery": "3.4.1",
     "pb-design-system": "6.0.0-beta.1.0.1",
     "popper.js": "1.14.7",
-    "rxjs": "6.4.0",
+    "rxjs": "6.5.2",
     "tslib": "1.9.3",
-    "zone.js": "0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.13.8",
-    "@angular/cli": "7.3.8",
-    "@angular/compiler-cli": "7.2.14",
-    "@angular/language-service": "7.2.14",
+    "@angular-devkit/build-angular": "~0.801.1",
+    "@angular/cli": "8.1.1",
+    "@angular/compiler-cli": "8.1.1",
+    "@angular/language-service": "8.1.1",
     "@types/jasmine": "3.3.9",
     "@types/jasminewd2": "2.0.6",
     "@types/node": "10.12.11",
-    "codelyzer": "4.5.0",
+    "codelyzer": "^5.0.1",
     "jasmine": "3.2.0",
     "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
@@ -58,6 +57,6 @@
     "protractor": "5.4.1",
     "ts-node": "8.1.0",
     "tslint": "5.16.0",
-    "typescript": "3.2.4"
+    "typescript": "3.4.5"
   }
 }
