--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starter",
-  "version": "1.2.0",
+  "version": "1.3.0-beta.2",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -12,16 +12,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.1.1",
-    "@angular/cdk": "8.1.1",
-    "@angular/common": "8.1.1",
-    "@angular/compiler": "8.1.1",
-    "@angular/core": "8.1.1",
-    "@angular/forms": "8.1.1",
-    "@angular/material": "8.1.1",
-    "@angular/platform-browser": "8.1.1",
-    "@angular/platform-browser-dynamic": "8.1.1",
-    "@angular/router": "8.1.1",
+    "@angular/animations": "8.1.2",
+    "@angular/cdk": "8.1.2",
+    "@angular/common": "8.1.2",
+    "@angular/compiler": "8.1.2",
+    "@angular/core": "8.1.2",
+    "@angular/forms": "8.1.2",
+    "@angular/material": "8.1.2",
+    "@angular/platform-browser": "8.1.2",
+    "@angular/platform-browser-dynamic": "8.1.2",
+    "@angular/router": "8.1.2",
     "@ngx-loading-bar/core": "4.2.0",
     "@ngx-loading-bar/http": "4.2.0",
     "@ngx-loading-bar/http-client": "4.2.0",
@@ -30,17 +30,17 @@
     "core-js": "2.5.7",
     "d3": "5.9.7",
     "jquery": "3.4.1",
-    "pb-design-system": "6.0.0-beta.1.0.1",
-    "popper.js": "1.14.7",
+    "pb-design-system": "6.0.0-beta.2",
+    "popper.js": "1.15.0",
     "rxjs": "6.5.2",
     "tslib": "1.9.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.1",
-    "@angular/cli": "8.1.1",
-    "@angular/compiler-cli": "8.1.1",
-    "@angular/language-service": "8.1.1",
+    "@angular/cli": "8.1.2",
+    "@angular/compiler-cli": "8.1.2",
+    "@angular/language-service": "8.1.2",
     "@types/jasmine": "3.3.9",
     "@types/jasminewd2": "2.0.6",
     "@types/node": "10.12.11",
@@ -55,6 +55,7 @@
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.0",
     "protractor": "5.4.1",
+    "topojson": "^3.0.2",
     "ts-node": "8.1.0",
     "tslint": "5.16.0",
     "typescript": "3.4.5"
