--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-starter-app",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0-beta.2",
   "description": "PB starter application with DS 6.0 beta",
   "main": "index.html",
   "scripts": {
@@ -16,7 +16,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "postcss": "7.0.17"
+    "postcss": "7.0.17",
+    "@typescript-eslint/eslint-plugin": "2.1.0",
+    "@typescript-eslint/eslint-plugin-tslint": "2.1.0",
+    "@typescript-eslint/parser": "2.1.0",
+    "eslint": "6.3.0",
+    "eslint-config-prettier": "^6.2.0",
+    "eslint-import-resolver-typescript": "^1.1.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-json": "^1.4.0",
+    "eslint-plugin-prettier": "^3.1.0"
   },
   "devDependencies": {
     "prettier": "1.18.2",
