--- a/client/package.json
+++ b/client/package.json
@@ -12,51 +12,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.1.1",
-    "@angular/cdk": "8.1.1",
-    "@angular/common": "8.1.1",
-    "@angular/compiler": "8.1.1",
-    "@angular/core": "8.1.1",
-    "@angular/forms": "8.1.1",
-    "@angular/material": "8.1.1",
-    "@angular/platform-browser": "8.1.1",
-    "@angular/platform-browser-dynamic": "8.1.1",
-    "@angular/router": "8.1.1",
+    "@angular/animations": "8.2.11",
+    "@angular/cdk": "8.2.3",
+    "@angular/common": "8.2.11",
+    "@angular/compiler": "8.2.11",
+    "@angular/core": "8.2.11",
+    "@angular/forms": "8.2.11",
+    "@angular/material": "8.2.3",
+    "@angular/platform-browser": "8.2.11",
+    "@angular/platform-browser-dynamic": "8.2.11",
+    "@angular/router": "8.2.11",
     "@ngx-loading-bar/core": "4.2.0",
-    "@ngx-loading-bar/http": "4.2.0",
     "@ngx-loading-bar/http-client": "4.2.0",
     "@ngx-loading-bar/router": "4.2.0",
     "bootstrap": "4.3.1",
-    "core-js": "2.5.7",
-    "d3": "5.9.7",
+    "core-js": "3.3.2",
+    "d3": "5.12.0",
     "jquery": "3.4.1",
-    "pb-design-system": "git+https://github.com/PBGUX/pb-design-system#34293a2",
-    "popper.js": "1.14.7",
-    "rxjs": "6.5.2",
+    "pb-design-system": "git+https://github.com/PBGUX/pb-design-system#d43380ef",
+    "popper.js": "1.16.0",
+    "rxjs": "6.5.3",
+    "topojson": "^3.0.2",
     "tslib": "1.9.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.1",
-    "@angular/cli": "8.1.1",
-    "@angular/compiler-cli": "8.1.1",
-    "@angular/language-service": "8.1.1",
-    "@types/jasmine": "3.3.9",
-    "@types/jasminewd2": "2.0.6",
-    "@types/node": "10.12.11",
-    "codelyzer": "^5.0.1",
-    "jasmine": "3.2.0",
-    "jasmine-core": "3.3.0",
+    "@angular-devkit/build-angular": "~0.803.10",
+    "@angular/cli": "8.3.10",
+    "@angular/compiler-cli": "8.2.11",
+    "@angular/language-service": "8.2.11",
+    "@types/jasmine": "3.4.4",
+    "@types/jasminewd2": "2.0.8",
+    "@types/node": "12.11.1",
+    "codelyzer": "5.1.2",
+    "jasmine": "3.5.0",
+    "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "^4.1.0",
-    "karma-chrome-launcher": "2.2.0",
+    "karma": "4.4.0",
+    "karma-chrome-launcher": "3.1.0",
     "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "2.0.4",
+    "karma-coverage-istanbul-reporter": "2.1.0",
     "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.0",
-    "protractor": "5.4.1",
-    "ts-node": "8.1.0",
-    "tslint": "5.16.0",
+    "karma-jasmine-html-reporter": "1.4.2",
+    "protractor": "5.4.2",
+    "ts-node": "8.4.1",
+    "tslint": "5.20.0",
     "typescript": "3.4.5"
   }
 }
