--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starter",
-  "version": "1.3.0-beta.2",
+  "version": "2.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -12,17 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.5",
-    "@angular/cdk": "8.1.4",
-    "@angular/common": "8.2.5",
-    "@angular/compiler": "8.2.5",
-    "@angular/core": "8.2.5",
-    "@angular/forms": "8.2.5",
-    "@angular/material": "8.1.4",
-    "@angular/platform-browser": "8.2.5",
-    "@angular/platform-browser-dynamic": "8.2.5",
-    "@angular/router": "8.2.5",
-    "@ng-bootstrap/ng-bootstrap": "5.1.1",
+    "@angular/animations": "8.2.13",
+    "@angular/cdk": "8.2.3",
+    "@angular/common": "8.2.13",
+    "@angular/compiler": "8.2.13",
+    "@angular/core": "8.2.13",
+    "@angular/forms": "8.2.13",
+    "@angular/material": "8.2.3",
+    "@angular/platform-browser": "8.2.13",
+    "@angular/platform-browser-dynamic": "8.2.13",
+    "@angular/router": "8.2.13",
+    "@ng-bootstrap/ng-bootstrap": "5.1.4",
     "@ngx-loading-bar/core": "4.2.0",
     "@ngx-loading-bar/http": "4.2.0",
     "@ngx-loading-bar/http-client": "4.2.0",
@@ -31,34 +31,34 @@
     "core-js": "2.5.7",
     "d3": "5.11.0",
     "jquery": "3.4.1",
-    "pb-design-system": "6.0.0-beta.2",
-    "popper.js": "1.15.0",
+    "pb-design-system": "6.0.2",
+    "popper.js": "1.16.0",
     "rxjs": "6.5.3",
     "tslib": "1.9.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.3",
-    "@angular/cli": "8.3.3",
-    "@angular/compiler-cli": "8.2.5",
-    "@angular/language-service": "8.2.5",
-    "@types/jasmine": "3.3.9",
-    "@types/jasminewd2": "2.0.6",
-    "@types/node": "10.12.11",
-    "codelyzer": "^5.0.1",
-    "jasmine": "3.2.0",
-    "jasmine-core": "3.3.0",
+    "@angular-devkit/build-angular": "~0.803.18",
+    "@angular/cli": "8.3.18",
+    "@angular/compiler-cli": "8.2.13",
+    "@angular/language-service": "8.2.13",
+    "@types/jasmine": "3.4.6",
+    "@types/jasminewd2": "2.0.8",
+    "@types/node": "12.12.7",
+    "codelyzer": "^5.2.0",
+    "jasmine": "3.5.0",
+    "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "^4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "2.0.4",
+    "karma-coverage-istanbul-reporter": "2.1.0",
     "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.0",
+    "karma-jasmine-html-reporter": "1.4.2",
     "protractor": "5.4.1",
     "topojson": "^3.0.2",
-    "ts-node": "8.1.0",
-    "tslint": "5.16.0",
+    "ts-node": "8.5.0",
+    "tslint": "5.20.1",
     "typescript": "3.4.5"
   }
 }
