--- a/client/package.json
+++ b/client/package.json
@@ -12,16 +12,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.13",
+    "@angular/animations": "8.2.14",
     "@angular/cdk": "8.2.3",
-    "@angular/common": "8.2.13",
-    "@angular/compiler": "8.2.13",
-    "@angular/core": "8.2.13",
-    "@angular/forms": "8.2.13",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/forms": "8.2.14",
     "@angular/material": "8.2.3",
-    "@angular/platform-browser": "8.2.13",
-    "@angular/platform-browser-dynamic": "8.2.13",
-    "@angular/router": "8.2.13",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/router": "8.2.14",
     "@ng-bootstrap/ng-bootstrap": "5.1.4",
     "@ngx-loading-bar/core": "4.2.0",
     "@ngx-loading-bar/http": "4.2.0",
@@ -31,17 +31,18 @@
     "core-js": "2.5.7",
     "d3": "5.11.0",
     "jquery": "3.4.1",
-    "pb-design-system": "6.0.2",
+    "pb-design-system": "6.0.7",
     "popper.js": "1.16.0",
     "rxjs": "6.5.3",
     "tslib": "1.9.3",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "topojson": "3.0.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.18",
-    "@angular/cli": "8.3.18",
-    "@angular/compiler-cli": "8.2.13",
-    "@angular/language-service": "8.2.13",
+    "@angular-devkit/build-angular": "^0.803.23",
+    "@angular/cli": "8.3.19",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/language-service": "8.2.14",
     "@types/jasmine": "3.4.6",
     "@types/jasminewd2": "2.0.8",
     "@types/node": "12.12.7",
@@ -56,7 +57,6 @@
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.2",
     "protractor": "5.4.1",
-    "topojson": "^3.0.2",
     "ts-node": "8.5.0",
     "tslint": "5.20.1",
     "typescript": "3.4.5"
