--- a/client/package.json
+++ b/client/package.json
@@ -35,30 +35,31 @@
     "popper.js": "1.16.0",
     "rxjs": "6.5.3",
     "tslib": "1.9.3",
-    "zone.js": "~0.9.1",
+    "zone.js": "0.9.1",
     "topojson": "3.0.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.23",
+    "@angular-devkit/build-angular": "0.803.23",
     "@angular/cli": "8.3.19",
     "@angular/compiler-cli": "8.2.14",
     "@angular/language-service": "8.2.14",
-    "@types/jasmine": "3.4.6",
-    "@types/jasminewd2": "2.0.8",
-    "@types/node": "12.12.7",
-    "codelyzer": "^5.2.0",
-    "jasmine": "3.5.0",
-    "jasmine-core": "3.5.0",
+    "@types/d3": "5.7.2",
+    "@types/jasmine": "3.3.0",
+    "@types/node": "10.12.11",
+    "codelyzer": "5.1.0",
+    "jasmine": "3.3.0",
+    "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "^4.4.1",
+    "karma": "4.1.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "2.1.0",
+    "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.2",
+    "karma-jasmine-html-reporter": "1.4.0",
     "protractor": "5.4.1",
-    "ts-node": "8.5.0",
-    "tslint": "5.20.1",
+    "ts-node": "8.0.2",
+    "tsickle": "0.35.0",
+    "tslint": "5.12.1",
     "typescript": "3.4.5"
   }
 }
