--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "eslint-plugin-json": "2.0.1",
     "eslint-plugin-prettier": "3.1.2",
     "postcss": "7.0.26",
+    "postcss-sass": "0.4.2",
     "typescript": "3.4.5"
   },
   "devDependencies": {
     "prettier": "1.19.1",
+    "autoprefixer": "9.7.4",
+    "postcss-cli": "7.1.0",
+    "stylelint-config-prettier": "8.0.1",
     "stylelint-prettier": "1.1.2",
-    "stylelint": "13.0.0",
-    "stylelint-config-prettier": "8.0.1"
+    "stylelint": "13.0.0"
   }
 }
