--- a/client/angular.json
+++ b/client/angular.json
@@ -88,7 +88,7 @@
       }
     },
     "sample-e2e": {
-      "root": "",
+      "root": "e2e",
       "sourceRoot": "",
       "projectType": "application",
       "architect": {
