--- a/client/package.json
+++ b/client/package.json
@@ -12,54 +12,61 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.14",
-    "@angular/cdk": "8.2.3",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14",
-    "@angular/material": "8.2.3",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/router": "8.2.14",
-    "@ng-bootstrap/ng-bootstrap": "5.1.4",
-    "@ngx-loading-bar/core": "4.2.0",
-    "@ngx-loading-bar/http": "4.2.0",
-    "@ngx-loading-bar/http-client": "4.2.0",
-    "@ngx-loading-bar/router": "4.2.0",
-    "bootstrap": "4.3.1",
-    "core-js": "2.5.7",
-    "d3": "5.11.0",
-    "jquery": "3.4.1",
-    "pb-design-system": "6.1.2",
-    "popper.js": "1.16.0",
-    "rxjs": "6.5.3",
-    "tslib": "1.9.3",
-    "zone.js": "0.9.1",
-    "topojson": "3.0.2"
+    "@angular/animations": "10.0.11",
+    "@angular/cdk": "10.1.3",
+    "@angular/common": "10.0.11",
+    "@angular/compiler": "10.0.11",
+    "@angular/core": "10.0.11",
+    "@angular/forms": "10.0.11",
+    "@angular/localize": "^10.0.11",
+    "@angular/material": "10.1.3",
+    "@angular/platform-browser": "10.0.11",
+    "@angular/platform-browser-dynamic": "10.0.11",
+    "@angular/platform-server": "10.0.11",
+    "@angular/router": "10.0.11",
+    "@ng-bootstrap/ng-bootstrap": "7.0.0",
+    "@ng-select/ng-select": "5.0.1",
+    "@nguniversal/express-engine": "10.0.2",
+    "@ngx-loading-bar/core": "5.1.0",
+    "@ngx-loading-bar/http-client": "5.1.0",
+    "@ngx-loading-bar/router": "5.1.0",
+    "angular-pipes": "10.0.0",
+    "bootstrap": "4.5.2",
+    "core-js": "3.6.5",
+    "d3": "5.16.0",
+    "jquery": "3.5.1",
+    "pb-design-system": "6.1.12",
+    "popper.js": "1.16.1",
+    "postcss": "7.0.32",
+    "rxjs": "6.6.2",
+    "topojson": "3.0.2",
+    "tslib": "2.0.1",
+    "zone.js": "0.11.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.803.23",
-    "@angular/cli": "8.3.19",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/language-service": "8.2.14",
+    "@angular-devkit/build-angular": "~0.1000.7",
+    "@angular/cli": "10.0.7",
+    "@angular/compiler-cli": "10.0.11",
+    "@angular/language-service": "10.0.11",
+    "@angularclass/hmr": "2.1.3",
     "@types/d3": "5.7.2",
     "@types/jasmine": "3.3.0",
-    "@types/node": "10.12.11",
-    "codelyzer": "5.1.0",
-    "jasmine": "3.3.0",
-    "jasmine-core": "3.3.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "^4.4.1",
+    "@types/jquery": "3.5.1",
+    "@types/node": "14.6.0",
+    "codelyzer": "6.0.0",
+    "jasmine": "3.6.1",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "5.0.2",
+    "karma": "^5.2.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "2.0.4",
-    "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.0",
-    "protractor": "5.4.1",
-    "ts-node": "8.0.2",
-    "tsickle": "0.35.0",
-    "tslint": "5.12.1",
-    "typescript": "3.4.5"
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "4.0.1",
+    "karma-jasmine-html-reporter": "1.5.4",
+    "protractor": "7.0.0",
+    "ts-node": "9.0.0",
+    "tslint": "6.1.3",
+    "tsickle": "0.39.1",
+    "typescript": "3.9.7"
   }
 }
