--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -10,9 +10,9 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es2015",
+    "target": "es5",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2017", "dom"],
+    "lib": ["es2018", "dom", "esnext.intl"],
     "baseUrl": "src",
     "paths": {
       "@app/*": ["app/*"],
