--- a/package.json
+++ b/package.json
@@ -16,25 +16,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "2.20.0",
-    "@typescript-eslint/eslint-plugin-tslint": "2.20.0",
-    "@typescript-eslint/parser": "2.20.0",
-    "eslint": "6.8.0",
-    "eslint-config-prettier": "6.10.0",
-    "eslint-import-resolver-typescript": "2.0.0",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-json": "2.0.1",
-    "eslint-plugin-prettier": "3.1.2",
-    "postcss": "7.0.27",
-    "postcss-sass": "0.4.2",
-    "typescript": "3.4.5"
+    "@typescript-eslint/eslint-plugin": "3.9.1",
+    "@typescript-eslint/eslint-plugin-tslint": "3.9.1",
+    "@typescript-eslint/parser": "3.9.1",
+    "eslint": "7.7.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-import-resolver-typescript": "2.2.1",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-json": "2.1.2",
+    "eslint-plugin-prettier": "3.1.4",
+    "postcss": "7.0.32",
+    "postcss-sass": "0.4.4",
+    "typescript": "3.9.7",
+    "tslint": "6.1.3"
   },
   "devDependencies": {
-    "prettier": "1.19.1",
-    "autoprefixer": "9.7.4",
-    "postcss-cli": "7.1.0",
-    "stylelint-config-prettier": "8.0.1",
+    "prettier": "2.1.1",
+    "autoprefixer": "9.8.6",
+    "postcss-cli": "7.1.2",
+    "stylelint-config-prettier": "8.0.2",
     "stylelint-prettier": "1.1.2",
-    "stylelint": "13.2.0"
-  }
+    "stylelint": "13.7.0"
+  },
+  "browserslist": [
+    ">0.5% in US, not IE 11"
+  ]
 }
