--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "cd client && npm start",
     "setup": "(npm install) && (cd client && npm install)",
     "build": "cd client && npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format:check": "prettier --check \"client/src/app/**/*.{js,ts,json,html,scss}\"",
+    "format:fix": "prettier --write \"client/src/app/**/*.{js,ts,json,html,scss}\""
   },
   "repository": {
     "type": "git",
