--- a/client/package.json
+++ b/client/package.json
@@ -34,32 +34,31 @@
     "pb-design-system": "6.1.12",
     "popper.js": "1.16.1",
     "rxjs": "6.6.3",
-    "tslib": "1.9.3",
-    "zone.js": "0.10.3",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2",
     "topojson": "3.0.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.803.23",
-    "@angular/cli": "8.3.19",
+    "@angular-devkit/build-angular": "~0.1001.0",
+    "@angular/cli": "10.1.0",
     "@angular/compiler-cli": "10.1.1",
     "@angular/language-service": "10.1.1",
     "@types/d3": "5.7.2",
     "@types/jasmine": "3.3.0",
-    "@types/node": "10.12.11",
-    "codelyzer": "5.1.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine": "3.3.0",
-    "jasmine-core": "3.3.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "2.2.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "2.0.4",
-    "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.0",
-    "protractor": "5.4.1",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "ts-node": "8.0.2",
-    "tsickle": "0.35.0",
-    "tslint": "5.12.1",
+    "tslint": "~6.1.0",
     "typescript": "4.0.2"
   }
 }
