--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "10.1.1",
-    "@angular/cdk": "9.2.4",
+    "@angular/cdk": "10.2.0",
     "@angular/common": "10.1.1",
     "@angular/compiler": "10.1.1",
     "@angular/core": "10.1.1",
     "@angular/forms": "10.1.1",
-    "@angular/material": "9.2.4",
+    "@angular/material": "10.2.0",
     "@angular/platform-browser": "10.1.1",
     "@angular/platform-browser-dynamic": "10.1.1",
     "@angular/router": "10.1.1",
@@ -34,8 +34,8 @@
     "pb-design-system": "6.1.12",
     "popper.js": "1.16.1",
     "rxjs": "6.6.3",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
+    "tslib": "^2.0.1",
+    "zone.js": "0.11.1",
     "topojson": "3.0.2"
   },
   "devDependencies": {
