--- a/package.json
+++ b/package.json
@@ -18,27 +18,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "3.9.1",
-    "@typescript-eslint/eslint-plugin-tslint": "3.9.1",
-    "@typescript-eslint/parser": "3.9.1",
-    "eslint": "7.7.0",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-import-resolver-typescript": "2.2.1",
-    "eslint-plugin-import": "2.22.0",
+    "@typescript-eslint/eslint-plugin": "4.5.0",
+    "@typescript-eslint/eslint-plugin-tslint": "4.5.0",
+    "@typescript-eslint/parser": "4.5.0",
+    "eslint": "7.11.0",
+    "eslint-config-prettier": "6.13.0",
+    "eslint-import-resolver-typescript": "2.3.0",
+    "eslint-plugin-import": "2.22.1",
     "eslint-plugin-json": "2.1.2",
     "eslint-plugin-prettier": "3.1.4",
-    "postcss": "7.0.32",
+    "postcss": "8.1.2",
     "postcss-sass": "0.4.4",
-    "typescript": "3.9.7",
-    "tslint": "6.1.3"
+    "tslint": "6.1.3",
+    "typescript": "4.0.3"
   },
   "devDependencies": {
-    "prettier": "2.1.1",
-    "autoprefixer": "9.8.6",
-    "postcss-cli": "7.1.2",
+    "autoprefixer": "10.0.1",
+    "postcss-cli": "8.1.0",
+    "prettier": "2.1.2",
+    "stylelint": "13.7.2",
     "stylelint-config-prettier": "8.0.2",
+    "stylelint-config-recommended-scss": "4.2.0",
     "stylelint-prettier": "1.1.2",
-    "stylelint": "13.7.0"
+    "stylelint-scss": "3.18.0"
   },
   "browserslist": [
     ">0.5% in US, not IE 11"
