--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
     "core-js": "3.6.5",
     "d3": "5.16.0",
     "jquery": "3.5.1",
-    "pb-design-system": "6.5.0-beta.8",
+    "pb-design-system": "6.5.0-beta.17",
     "popper.js": "1.16.1",
     "rxjs": "6.6.3",
     "topojson-client": "3.1.0",
@@ -40,7 +40,7 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1001.7",
+    "@angular-devkit/build-angular": "^0.1100.1",
     "@angular/cli": "10.1.7",
     "@angular/compiler-cli": "10.1.6",
     "@angular/language-service": "10.1.6",
