--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starter",
-  "version": "3.0.0",
+  "version": "2.5.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -32,7 +32,7 @@
     "core-js": "3.6.5",
     "d3": "5.16.0",
     "jquery": "3.5.1",
-    "pb-design-system": "6.5.0-beta.17",
+    "pb-design-system": "6.5.0",
     "popper.js": "1.16.1",
     "rxjs": "6.6.3",
     "topojson-client": "3.1.0",
