--- a/client/angular.json
+++ b/client/angular.json
@@ -62,8 +62,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "starter:build",
-            "aot": true
+            "browserTarget": "starter:build"
           },
           "configurations": {
             "production": {
