--- a/client/angular.json
+++ b/client/angular.json
@@ -30,10 +30,7 @@
               "node_modules/pb-design-system/dist/css/designsystem.css",
               "src/styles.scss"
             ],
-            "scripts": [
-              "node_modules/jquery/dist/jquery.slim.js",
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
